<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_question"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/include_navi"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <!--<android.support.v4.widget.SwipeRefreshLayout-->
        <!--android:id="@+id/sw_refresh"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--&gt;-->
        <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/rc_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"/>-->

        <!--</android.support.v4.widget.SwipeRefreshLayout>-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:gravity="center"
                    android:text="問題說明"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edit_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/drawable_edit_normal"
                    android:gravity="left|top"
                    android:hint="請輸入問題描述文本"
                    android:imeOptions="flagNoExtractUi"
                    android:lineSpacingExtra="@dimen/margin_3"
                    android:minHeight="@dimen/height_40"
                    android:minLines="6"
                    android:padding="@dimen/margin_5"
                    android:scrollbars="vertical"
                    android:textColor="@color/color_1e1e1e"
                    android:textColorHint="@color/color_b4"
                    android:textSize="14sp" />

                <LinearLayout
                    android:id="@+id/ll_attvoice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="附加語音" />

                    <ImageView
                        android:id="@+id/iv_voice"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@color/color_theme"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/voice_left3" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_attpic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="附加照片" />

                    <ImageView
                        android:id="@+id/iv_pic"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:gravity="center" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_attvedio"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center"
                        android:text="附加視頻" />

                    <VideoView
                        android:id="@+id/vv_vedio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:id="@+id/layout_record"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="@drawable/chat_top_voice_bg"
            android:padding="10dp"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/iv_record"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/action_settings"
                android:src="@mipmap/chat_icon_voice1" />

            <TextView
                android:id="@+id/tv_voice_tips"
                style="@style/style_text_white"
                android:layout_below="@id/iv_record"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/voice_up_tips"
                android:textSize="14sp" />

        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv_picture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="2dp"
            android:drawableTop="@mipmap/btn_pic"
            android:gravity="center"
            android:text="@string/picture" />

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="2dp"
            android:drawableTop="@mipmap/btn_camera"
            android:gravity="center"
            android:text="@string/camera" />

        <TextView
            android:id="@+id/tv_vedio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="2dp"
            android:drawableTop="@mipmap/btn_video"
            android:gravity="center"
            android:text="視頻" />

        <TextView
            android:id="@+id/tv_mic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:drawablePadding="2dp"
            android:drawableTop="@mipmap/btn_mic"
            android:gravity="center"
            android:text="錄音" />

    </LinearLayout>
    <!--<include layout="@layout/include_chat_bottom_bar" />-->
</LinearLayout>
